Opened 11 years ago
Closed 11 years ago
#10962 closed bug (fixed)
[WebPositive] renamed bookmarks don't work till restart
Reported by: | diver | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/WebPositive | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Renamed bookmarks don't work in Bookmark bar till restart
- Bookmarks->Manage bookmarks
- Rename any bookmark
- Nothing happens when you click it in Bookmark bar
Still wotks from Bookmarks menu.
Note:
See TracTickets
for help on using tickets.
Fixed in hrev47426.