Update bookmark bar item BMessage on file rename.

The ref stored in the message must be replaced to point to the new file
name. Fixes #10962.